--- a/www/DirSynch-help.html
+++ b/www/DirSynch-help.html
@@ -29,16 +29,18 @@
 			<li>Select the main directory.
 			<li>Select the second directory.
 			<li>Hit the "Load" button and wait for the file list to be filled.
-			<li>Analyse the list and uncheck the files you don't want to synchronize (you can use the Tools->Select menu).
+			<li>Analyse the list and uncheck the files you don't want to synchronize (you can use the Tools->Select menu or the toolbar).
 			<li>Hit the "Synchronize" button and wait until it finishes (a progress bar will be shown).
 			<li>If the operation is successful, when you click "OK" in the "Success" message window the list will be reloaded.
 		</ol>
+		<h3>System requirements</h3>
+		<ul>
+			<li>Java SE 6</li>
+		</ul>
                 <h3>Needed files</h3>
                 <ul>
                     <li>DirSynch.jar</li>
-                    <li>lib\swing-layout-1.0.3.jar</li>
                 </ul>
-		<p>The "swing-layout-1.0.3.jar" comes from <a href="http://www.netbeans.org">NetBeans</a>.</p>
                 <h3>Files for this help</h3>
                 <ul>
                     <li>DirSynch-help.html</li>
@@ -49,7 +51,7 @@
                 <h3>Optional files</h3>
                 <ul>
                     <li>DirSynch.properties</li>
-	        </ul>
+	            </ul>
 		<h3>Command line parameters</h3>
 		I use this to create specific icons on my desktop, for each dir I usually synchronize.
 <pre>java[w] -jar DirSynch.jar [Params]
@@ -78,7 +80,7 @@ Params:
                             <dt>Newer in sec</dt>
                             <dd>Select only the files that are newer in the second dir than in the main.</dd>
                             <dt>Sel/Unsel with regexp...</dt>
-                            <dd>Let the user enter a regular expression (<a href="http://java.sun.com/j2se/1.5.0/docs/api/java/util/regex/Pattern.html">Java syntax</a>) to select or unselect the files.
+                            <dd>Let the user enter a regular expression (<a href="http://java.sun.com/javase/6/docs/api/java/util/regex/Pattern.html">Java syntax</a>) to select or unselect the files.
                             This command does not change the selection status of the files that don't match.</dd>
                     </dl></dd>
                 </dl>
@@ -121,23 +123,38 @@ Params:
 			<li>In the second dir.
 			<li>In the user dir (according to the operating system).
 		</ul>
-		<p>Notice that all files found in those places will be loaded and used to avoid synching.  Currently only exact matches are used, no wildcards are supported and the case must be the same (case sensitive).
+		<p>Notice that all files found in those places will be loaded and used to avoid synching.  Currently the case must be the same (case sensitive).
 		<p>All files and directories with the names listed will be skipped.  For example: if you put "TEMP" in the _nosynch file and there are two directories with this name, in the main dir and inside a subdir "MyDir", both will be skipped and all its subdirs.
                 <p>The nosynch files are read every time the list is loaded, so you can change it "on the fly", without closing the program.
                 <h4>Wildcards</h4>
                 <p>The lines in the .nosynch file that starts with the character "|" (pipe) are processed as 
-                regular expressions.  The syntax is the one from <code><a href="http://java.sun.com/j2se/1.5.0/docs/api/java/util/regex/Pattern.html">java.util.regex.Pattern</a></code> class.</p>
+                regular expressions.  The syntax is the one from <code><a href="http://java.sun.com/javase/6/docs/api/java/util/regex/Pattern.html">java.util.regex.Pattern</a></code> class.</p>
                 <p>For example:
                 <dl>
                     <dt><tt>|.+\.zip</tt></dt>
                     <dd>This line matches all files with the extension ".zip" (case ignored), so those files won't be synchronized.</dd>
                 </dl>
+		<h4>Tips</h4>
+		<p>When I create a .nosynch file, I put ".nosynch" in the first line, to avoid synching itself.</p>
+		<p>I usually also put a line with "|.+~", to avoid copying backup files created by Vim.</p>
+		<p>My third line (when in Windows) usually is "Thumbs.db", as they're protected files and cause errors when I try to synch them.</p>
                 <h3>Known issues</h3>
                 <p>If two files have the same times, but different sizes, they are marked as "BIG" (bigger) and "sml" (smaller).
             DirSynch ignores those files when synchronizing.</p>
                 <a name="roadmap"><h2>Roadmap</h2></a>
 		<p>To see the future plans, please access our <a href="http://dirsynch.dev.java.net/servlets/ProjectIssues" target="_blank">issue tracker page</a>.</p>
 		<p>History of versions:</p>
+<h3>v1.6 (__/__/2009):</h3>
+<ul class="tasks">
+	<li class='done'><a href='https://dirsynch.dev.java.net/issues/show_bug.cgi?id=1'>Issue #1 - When a file is open, the synch fails with no error msg</a></li>
+	<li class='todo'><a href='https://dirsynch.dev.java.net/issues/show_bug.cgi?id=2'>Issue #2 - _onlysynch</a></li>
+	<li class='todo'><a href='https://dirsynch.dev.java.net/issues/show_bug.cgi?id=3'>Issue #3 - Wildcard characters (*, ?) in _onlysynch</a></li>
+	<li class='done'><a href='https://dirsynch.dev.java.net/issues/show_bug.cgi?id=4'>Issue #4 - Interface for the options that are only in the .properties file</a></li>
+	<li class='done'><a href='https://dirsynch.dev.java.net/issues/show_bug.cgi?id=13'>Issue #13 - Toolbar with common tools</a></li>
+	<li class='done'><a href='https://dirsynch.dev.java.net/issues/show_bug.cgi?id=17'>Issue #17 - Change plain threads to SwingWorker</a></li>
+	<li class='done'><a href='https://dirsynch.dev.java.net/issues/show_bug.cgi?id=18'>Issue #18 - Save options dialog doesn't show dirs</a></li>
+	<li class='todo'><a href='https://dirsynch.dev.java.net/issues/show_bug.cgi?id=19'>Issue #19 - Update help file to v1.6</a></li>
+</ul>
 <h3>v1.5.2 (28/05/2008):</h3>
 <ul class="tasks">
     <li class="done"> Added and changed some INFO and DEBUG levels log messages
